# uGC

./: CMakeLists.txt  Dockerfile  README.md  build.sh
toolchain/: rv64ima.cmake
ugc/: CMakeLists.txt  uGC.cpp  uGC.h  uGCBase.h  uGCHandleManager.cpp  uGCHandleManager.h  uGCHandleStore.cpp  uGCHandleStore.h  uGCHeap.cpp  uGCHeap.h
